Update front page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Greek Digital Community</title>
+    <title>Greek Digital Community | Η ελληνική ψηφιακή κοινότητα στο Slack</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,23 +30,32 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="index.html">Αρχική
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about.html">Σχετικά</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="contact.html">Επικοινωνία</a>
+            </li> -->
           </ul>
         </div>
       </div>
     </nav>
 
+    <!-- Content -->
     <div class="content">
-      <div class="container">Hello</div>
+      <div class="container">
+        <div class="jumbotron transparent">
+          <h1 class="display-3">Καλώς ήρθες</h1>
+          <p class="lead">Είμαστε μία ψηφιακή κοινότητα στο Slack που έχει στόχο να προσφέρει ένα βήμα επικοινωνίας σε όσους ασχολούνται με τις ψηφιακές τεχνολογίες στην Ελλάδα.</p>
+          <hr class="my-4">
+          <p>Η κοινότητα απευθύνεται σε developers, designers, agile practitioners, product owners, digital marketers και οποιδήποτε άλλο ασχολείται με το digital. Για να συμμετέχεις και εσύ θα πρέπει να λάβεις πρόσκληση.<p>
+          <p class="lead"><a class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
+        </div>
+      </div>
     </div>
 
     <!-- Bootstrap core JavaScript -->
