Update channel descriptions

--- a/about.html
+++ b/about.html
@@ -66,25 +66,25 @@
           <h2>Κανάλια</h2>
           <dl class="row">
             <dt class="col-sm-3"><a class="link" href="#">#agile</a></dt>
-            <dd class="col-sm-9">Discussions about agile processes (scrum, lean, estimations).</dd>
+            <dd class="col-sm-9">Συζητήσεις για διαδικασίες agile (scrum, lean, estimations).</dd>
             <dt class="col-sm-3"><a class="link" href="#">#backend</a></dt>
-            <dd class="col-sm-9">Discussions about backend development (java, php, ruby, node, etc).</dd>
+            <dd class="col-sm-9">Συζητήσεις για προγραμματισμό στο backend (java, php, ruby, node, etc).</dd>
             <dt class="col-sm-3"><a class="link" href="#">#data-science</a></dt>
-            <dd class="col-sm-9">Discussions about data science (machine learning, AI, R, matlab).</dd>
+            <dd class="col-sm-9">Συζητήσεις για data science (machine learning, AI, R, matlab).</dd>
             <dt class="col-sm-3"><a class="link" href="#">#databases</a></dt>
-            <dd class="col-sm-9">Chat about databases, post questions, answers, problems.</dd>
+            <dd class="col-sm-9">Συζητήσεις για βάσεις δεδομένων, ερωτήσεις, απαντήσεις, προβλήματα.</dd>
             <dt class="col-sm-3"><a class="link" href="#">#devops</a></dt>
-            <dd class="col-sm-9">Discussions about devops (server admin, containers, virtualisation).</dd>
+            <dd class="col-sm-9">Συζητήσεις για devops (server admin, containers, virtualisation).</dd>
             <dt class="col-sm-3"><a class="link" href="#">#frontend</a></dt>
-            <dd class="col-sm-9">Discussions about frontend development and frameworks (react, angular, etc).</dd>
+            <dd class="col-sm-9">Συζητήσεις για προγραμματισμός frontend και frameworks (react, angular, etc).</dd>
             <dt class="col-sm-3"><a class="link" href="#">#general</a></dt>
-            <dd class="col-sm-9">General discussion.</dd>
+            <dd class="col-sm-9">Γενική συζήτηση..</dd>
             <dt class="col-sm-3"><a class="link" href="#">#introductions</a></dt>
-            <dd class="col-sm-9">Introduce yourself.</dd>
+            <dd class="col-sm-9">Συστηθείτε μας..</dd>
             <dt class="col-sm-3"><a class="link" href="#">#jobs</a></dt>
-            <dd class="col-sm-9"> Discussions about job listings, roles in companies people work, opportunities, etc.</dd>
+            <dd class="col-sm-9"> Συζητήσεις για ευκαιρίες εργασίας, θέσεις, εταιρίες, κτλ..</dd>
             <dt class="col-sm-3"><a class="link" href="#">#random</a></dt>
-            <dd class="col-sm-9">Random things ;)</dd>
+            <dd class="col-sm-9">Τυχαίες κουβέντες ;)</dd>
           </dl>
           <hr class="my-4">
           <p>Για να συμμετέχεις λάβε πρόσκληση.<p>
