Update channel URLs

--- a/about.html
+++ b/about.html
@@ -66,26 +66,34 @@
           <h2>Κανάλια</h2>
           <p>Καινούργια κανάλια προσθέτονται συνεχώς. Μερικά από τα πιο ενεργά κανάλια είναι:</p> 
           <dl class="row">
-            <dt class="col-sm-3"><a class="link" href="#">#agile</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5QNAH2U8">#agile</a></dt>
             <dd class="col-sm-9">Συζητήσεις για διαδικασίες agile (scrum, lean, estimations).</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#backend</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RF3HS4V">#backend</a></dt>
             <dd class="col-sm-9">Συζητήσεις για προγραμματισμό στο backend (java, php, ruby, node, etc).</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#data-science</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5S7C07RV">#data-science</a></dt>
             <dd class="col-sm-9">Συζητήσεις για data science (machine learning, AI, R, matlab).</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#databases</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C67TF8G2D">#databases</a></dt>
             <dd class="col-sm-9">Συζητήσεις για βάσεις δεδομένων, ερωτήσεις, απαντήσεις, προβλήματα.</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#devops</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RDZ728L">#devops</a></dt>
             <dd class="col-sm-9">Συζητήσεις για devops (server admin, containers, virtualisation).</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#frontend</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RCH4MR8">#frontend</a></dt>
             <dd class="col-sm-9">Συζητήσεις για προγραμματισμός frontend και frameworks (react, angular, etc).</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#general</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4VTJSYJD">#general</a></dt>
             <dd class="col-sm-9">Γενική συζήτηση..</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#introductions</a></dt>
-            <dd class="col-sm-9">Συστηθείτε μας..</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#jobs</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4XHCMVBJ">#introductions</a></dt>
+            <dd class="col-sm-9">Συστηθείτε.</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5TDMFCQY/">#jobs</a></dt>
             <dd class="col-sm-9"> Συζητήσεις για ευκαιρίες εργασίας, θέσεις, εταιρίες, κτλ..</dd>
-            <dt class="col-sm-3"><a class="link" href="#">#random</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4WK7HNBW">#random</a></dt>
             <dd class="col-sm-9">Τυχαίες κουβέντες ;)</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C66SCG8BZ">#seo</a></dt>
+            <dd class="col-sm-9">Συζητήσεις για ψηφιακό μάρκετινγκ και βελτιστοποίηση.</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C53E4C9D2">#shell</a></dt>
+            <dd class="col-sm-9">Συζητήσεις για την γραμμή εντολών.</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C6FB8DVCZ">#suggestions</a></dt>
+            <dd class="col-sm-9">Συζητήσεις για να βελτιώσουμε την κοινότητα.</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RDYUYFN">#ux-design</a></dt>
+            <dd class="col-sm-9">Συζητήσεις για UX και design.</dd>
           </dl>
           <hr class="my-4">
           <p>Για να συμμετέχεις λάβε πρόσκληση.<p>
