Add event tracking on registration button

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
           </dl>
           <hr class="my-4">
           <p>Για να συμμετέχεις λάβε πρόσκληση.<p>
-          <p class="lead"><a class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
+          <p class="lead"><a onclick="ga('send', 'event', 'cta', 'registration');" class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
         </div>
       </div>
     </div>
