--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="el">
 
   <head>
-  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108613593-1"></script>
   <script>
@@ -12,7 +11,6 @@
 
     gtag('config', 'UA-108613593-1');
   </script>
-
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -64,7 +62,7 @@
           <p class="lead">Είμαστε μία ψηφιακή κοινότητα στο Slack που έχει στόχο να προσφέρει ένα βήμα επικοινωνίας σε όσους ασχολούνται με τις ψηφιακές τεχνολογίες στην Ελλάδα.</p>
           <hr class="my-4">
           <p>Η κοινότητα απευθύνεται σε developers, designers, agile practitioners, product owners, digital marketers και οποιδήποτε άλλο ασχολείται με το digital. Για να συμμετέχεις και εσύ θα πρέπει να λάβεις πρόσκληση.<p>
-          <p class="lead"><a class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
+          <p class="lead"><a onclick="ga('send', 'event', 'cta', 'registration');" class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
         </div>
       </div>
     </div>
