minor spelling stuff

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h1 class="display-3">Καλώς ήρθες</h1>
           <p class="lead">Είμαστε μία ψηφιακή κοινότητα στο Slack που έχει στόχο να προσφέρει ένα βήμα επικοινωνίας σε όσους ασχολούνται με τις ψηφιακές τεχνολογίες στην Ελλάδα.</p>
           <hr class="my-4">
-          <p>Η κοινότητα απευθύνεται σε developers, designers, agile practitioners, product owners, digital marketers και οποιδήποτε άλλο ασχολείται με το digital. Για να συμμετέχεις και εσύ θα πρέπει να λάβεις πρόσκληση.<p>
+          <p>Η κοινότητα απευθύνεται σε developers, designers, agile practitioners, product owners, digital marketeers και οποιovδήποτε άλλο ασχολείται με το digital. Για να συμμετέχεις και εσύ μπορείς να ζητήσεις και να λάβεις μια πρόσκληση.<p>
           <p class="lead"><a onclick="ga('send', 'event', 'cta', 'registration');" class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
         </div>
       </div>
