Update spelling and added logo link to homepage

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Greek Digital Community</a>
+        <a class="navbar-brand" href="index.html">Greek Digital Community</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -89,7 +89,7 @@
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4VTJSYJD">#general</a></dt>
             <dd class="col-sm-9">Γενική συζήτηση..</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4XHCMVBJ">#introductions</a></dt>
-            <dd class="col-sm-9">Συστηθείτε.</dd>
+            <dd class="col-sm-9">Συστηθείτε μας.</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5TDMFCQY/">#jobs</a></dt>
             <dd class="col-sm-9"> Συζητήσεις για ευκαιρίες εργασίας, θέσεις, εταιρίες, κτλ..</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4WK7HNBW">#random</a></dt>
@@ -104,7 +104,7 @@
             <dd class="col-sm-9">Συζητήσεις για UX και design.</dd>
           </dl>
           <hr class="my-4">
-          <p>Για να συμμετέχεις λάβε πρόσκληση.<p>
+          <p>Για να συμμετέχεις ζήτησε πρόσκληση.<p>
           <p class="lead"><a onclick="ga('send', 'event', 'cta', 'registration');" class="btn btn-primary btn-lg" href="https://greekdigitalcommunity.herokuapp.com" role="button">Θέλω πρόσκληση</a></p>
         </div>
       </div>
