--- a/about.html
+++ b/about.html
@@ -13,8 +13,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Greek Digital Community | Η ελληνική ψηφιακή κοινότητα στο Slack">
 
     <title>Greek Digital Community | Η ελληνική ψηφιακή κοινότητα στο Slack</title>
 
@@ -23,6 +22,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/full.css" rel="stylesheet">
+
+    <!-- Authors -->
+    <link rel="author" href="humans.txt" />
 
   </head>
 
