--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">Σχετικά</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://greekdigitalcommunity.herokuapp.com">Πρόσκληση</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
             </li> -->
