--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
     <!-- Custom styles for this template -->
     <link href="css/full.css" rel="stylesheet">
 
+    <!-- Ubuntu font -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+
   </head>
 
   <body>
