--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
           <p>Θέλουμε να τροφοδοτήσουμε το επόμενο κύμα της ψηφιακής εξέλιξης στην Ελλάδα.</p>
           <p>Πιστεύουμε πως μέσα από την συνεργασία των διαφορετικών αντικειμένων (τεχνολογία, design, στρατηγική) νέες ψηφιακές ιδέες, έργα, υπηρεσίες, προϊόντα και εταιρίες θα αναδειχθούν. Σχεδιάζουμε να είμαστε το μέσω που βοηθά ανθρώπους να αποκτήσουν πρόσβαση σε γνώση, εμπειρία και τεχνογνωσία, που ενώνει ανθρώπους και παρέχει νέες ψηφιακές οπτικές γωνίες.</p>
           <h2>Κανάλια</h2>
-          <p>Καινούργια κανάλια προσθέτονται συνεχώς. Μερικά από τα πιο ενεργά κανάλια είναι:</p> 
+          <p>Καινούργια κανάλια προσθέτονται συνεχώς. Μερικά από τα πιο ενεργά κανάλια είναι:</p>
           <dl class="row">
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5QNAH2U8">#agile</a></dt>
             <dd class="col-sm-9">Συζητήσεις για διαδικασίες agile (scrum, lean, estimations).</dd>
@@ -88,9 +88,9 @@
             <dd class="col-sm-9">Συζητήσεις για devops (server admin, containers, virtualisation).</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RCH4MR8">#frontend</a></dt>
             <dd class="col-sm-9">Συζητήσεις για προγραμματισμός frontend και frameworks (react, angular, etc).</dd>
-            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4VTJSYJD">#general</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4VTJSYJD">#general</a></dt>
             <dd class="col-sm-9">Γενική συζήτηση..</dd>
-            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4XHCMVBJ">#introductions</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4XHCMVBJ">#introductions</a></dt>
             <dd class="col-sm-9">Συστηθείτε μας.</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5TDMFCQY/">#jobs</a></dt>
             <dd class="col-sm-9"> Συζητήσεις για ευκαιρίες εργασίας, θέσεις, εταιρίες, κτλ..</dd>
