fixed broken links

--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RDZ728L">#devops</a></dt>
             <dd class="col-sm-9">Συζητήσεις για devops (server admin, containers, virtualisation).</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5RCH4MR8">#frontend</a></dt>
-            <dd class="col-sm-9">Συζητήσεις για προγραμματισμός frontend και frameworks (react, angular, etc).</dd>
-            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4VTJSYJD">#general</a></dt>
+            <dd class="col-sm-9">Συζητήσεις για frontend προγραμματισμό και frameworks (react, angular, etc).</dd>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4VTJSYJD">#general</a></dt>
             <dd class="col-sm-9">Γενική συζήτηση..</dd>
-            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunityslack.com/messages/C4XHCMVBJ">#introductions</a></dt>
+            <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C4XHCMVBJ">#introductions</a></dt>
             <dd class="col-sm-9">Συστηθείτε μας.</dd>
             <dt class="col-sm-3"><a class="link" href="https://greekdigitalcommunity.slack.com/messages/C5TDMFCQY/">#jobs</a></dt>
             <dd class="col-sm-9"> Συζητήσεις για ευκαιρίες εργασίας, θέσεις, εταιρίες, κτλ..</dd>
