--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://jobs.greekdigitalcommunity.com" target="_blank">Jobs</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
             </li> -->
