renamed job link

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Σχετικά</a>
+              <a class="nav-link" href="https://jobs.greekdigitalcommunity.com" target="_blank">Θέσεις εργασίας</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://jobs.greekdigitalcommunity.com" target="_blank">Jobs</a>
+              <a class="nav-link" href="about.html">Σχετικά</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
