renamed jobs link

--- a/about.html
+++ b/about.html
@@ -42,13 +42,13 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Αρχική</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://jobs.greekdigitalcommunity.com" target="_blank">Θέσεις εργασίας</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="about.html">Σχετικά
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://jobs.greekdigitalcommunity.com" target="_blank">Jobs</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
