--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
+            <li>
+              <a class="nav-link" href="terms.html">Όροι Χρήσης</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
             </li> -->
