changed section wording

--- a/terms.html
+++ b/terms.html
@@ -65,7 +65,7 @@
     <div class="content">
       <div class="container">
         <div class="jumbotron transparent">
-          <h1 class="display-3">Όροι και προϋποθέσεις</h1>
+          <h1 class="display-3">Όροι & Ομάδα Διαχείρισης</h1>
           <p class="lead">Με στόχο την ομαλή λειτουργία της κοινότητας μας και πάντα με τις αρχές του inclusivity, θέλουμε να δημιουργήσουμε ένα όμορφο περιβάλλον που λειτουργεί για όλους.</p>
           <hr class="my-4">
           <h2>Όροι χρήσης κοινότητας Slack</h2>
