fixed wording added admin name

--- a/terms.html
+++ b/terms.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="about.html">Σχετικά</a>
             </li>
             <li>
-              <a class="nav-link active" href="terms.html">Όροι Χρήσης
+              <a class="nav-link active" href="terms.html">Όροι Συμμετοχής
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -85,10 +85,11 @@
             <li>@<strong>sotoz</strong> - Σωτήρης Γκανούρης</li>
             <li>@<strong>stelios</strong> - Στέλιος Μόσχος</li>
             <li>@<strong>tassos</strong> - Τάσσος Κούτλας</li>
+            <li>@<strong>thanos</strong> - Θάνος Ηροδότου</li>
             <li>@<strong>Thanos Nokas</strong> - Θάνος Νόκας</li>
             <li>@<strong>ThanosKorakas</strong> - Θάνος Κορακάς</li>
           </ul>    
-          <p>Η ομάδα διαχείρισης παρακολουθεί καθημερινά τις συζητήσεις και εξελίξεις στην κοινότητα του Slack. Εάν αντιμετωπίσετε κάποιο πρόβλημα ή θέλετε να συζητήσετε σχετικά με τους όρους, επικοινωνήστε με την ομάδα διαχείρισης.</p>      
+          <p>Η ομάδα διαχείρισης παρακολουθεί καθημερινά τις συζητήσεις και εξελίξεις στην κοινότητα του Slack. Εάν αντιμετωπίσετε κάποιο πρόβλημα ή θέλετε να συζητήσετε σχετικά με τους όρους, μη διστάσετε να επικοινωνήσετε μαζί μας.</p>      
         </div>
       </div>
     </div>
