--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a class="nav-link" href="terms.html">Όροι Χρήσης</a>
+              <a class="nav-link" href="terms.html">Όροι Συμμετοχής</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">Επικοινωνία</a>
