changed nsfw terms

--- a/terms.html
+++ b/terms.html
@@ -74,7 +74,7 @@
             <li>Απαραίτητη προϋπόθεση είναι ο αλληλοσεβασμός των μελών της κοινότητας.</li>
             <li>Απαγορεύονται μηνύματα που περιέχουν ρατσιστικό περιεχόμενο, περιεχόμενο μίσους, διακρίσεων κλπ.</li>
             <li>Απαγορεύεται η διακίνηση παράνομου υλικού ή χρήση της κοινότητας για παράνομες ενέργειες.</li>
-            <li>Απαγορεύεται η δημοσιοποίηση NSFW περιεχομένου, εκτός από το κανάλι <a class="link" href="https://greekdigitalcommunity.slack.com/messages/CL2RQGML6/">#nsfw</a>.</li>
+            <li>Θέλουμε να διατηρούμε ένα επαγγελματικό επίπεδο κατά τη συμμετοχή μας στη κοινότητα. Απαγορεύεται η δημοσιοποίηση NSFW περιεχομένου.</li>
           </ul>
           <h2>Ομάδα διαχείρισης</h2>
           <ul>
