Typo on my name.

--- a/terms.html
+++ b/terms.html
@@ -84,7 +84,7 @@
             <li>@<strong>NatyGeo</strong> - Ναταλία Γεωργιάδου</li>
             <li>@<strong>sotoz</strong> - Σωτήρης Γκανούρης</li>
             <li>@<strong>stelios</strong> - Στέλιος Μόσχος</li>
-            <li>@<strong>tassos</strong> - Τάσσος Κούτλας</li>
+            <li>@<strong>tassos</strong> - Τάσος Κούτλας</li>
             <li>@<strong>thanos</strong> - Θάνος Ηροδότου</li>
             <li>@<strong>Thanos Nokas</strong> - Θάνος Νόκας</li>
             <li>@<strong>ThanosKorakas</strong> - Θάνος Κορακάς</li>
