--- a/terms.html
+++ b/terms.html
@@ -78,8 +78,8 @@
           </ul>
           <h2>Ειδοποιήσεις από το Slack</h2>
           <p>Για να εκπληρώσουμε τους στόχους της κοινότητάς μας χρειάζεται ενασχόληση των χρηστών και αυτό εν μέρει επιτυγχάνεται με ειδοποιήσεις.</p>
-          <p>Κάθε ειδοποίηση που στέλνουμε θεωρούμε πως έχει ενδιαφέρον για κάποια ομάδα της κοινότητας και για αυτό την στέλνουμε. Αντιλαμβανόμαστε πως κάποιες ειδοποιήσεις θα είναι χρήσιμες για κάποιους/ες, ενώ κάποιες άλλες θα είναι για άλλους/ες.</p>
-          <p>Το Slack δίνει τη δυνατότητα αν κάποιος/α βρίσκει ανεξαιρέτως όλα τις ειδοποιήσεις χωρίς ενδιαφέρον να κάνει τα κανάλια αθόρυβα.</p>
+          <p>Κάθε ειδοποίηση που στέλνουμε θεωρούμε πως έχει ενδιαφέρον για κάποια ομάδα της κοινότητας. Αντιλαμβανόμαστε πως κάποιες ειδοποιήσεις θα είναι χρήσιμες για κάποιους/ες, ενώ κάποιες άλλες θα είναι για άλλους/ες.</p>
+          <p>Το Slack δίνει τη δυνατότητα αν κάποιος/α βρίσκει ανεξαιρέτως όλες τις ειδοποιήσεις χωρίς ενδιαφέρον να κάνει τα κανάλια αθόρυβα.</p>
           <h2>Ομάδα διαχείρισης</h2>
           <ul>
             <li>@<strong>ggkouklos</strong> - Γιώργος Γεωργίτσης</li>
